# vixputspread

./: .gitignore  GUIDE.md  README.md  config.yaml.example  pyproject.toml
.claude/: settings.local.json
tests/: conftest.py  test_backtest.py  test_cli_smoke.py  test_db.py  test_exit_rules.py  test_har_rv.py  test_pricing.py  test_signals_strike_selection.py  test_sizing.py  test_stress.py  test_surface.py
vrp/: __init__.py  config.py  logging_setup.py
vrp/alerts/: __init__.py  notifier.py
vrp/backtest/: __init__.py  engine.py  reporting.py  stress.py
vrp/cli/: __init__.py  main.py
vrp/cli/commands/: __init__.py  add.py  backtest.py  close.py  daily.py  hedge_status.py  monitor.py  positions.py  scan.py  stats.py  stress.py
vrp/data/: __init__.py  cache.py  live.py  providers.py
vrp/forecasting/: __init__.py  har_rv.py  yang_zhang.py
vrp/hedging/: __init__.py  tail_hedge.py
vrp/persistence/: __init__.py  db.py  models.py
vrp/pricing/: __init__.py  black_scholes.py  greeks.py  surface.py
vrp/signals/: __init__.py  entry.py  exit.py  regime.py
vrp/sizing/: __init__.py  correlation.py  sizer.py  var.py
