[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vrp"
version = "0.1.0"
description = "Variance Risk Premium harvesting strategy for retail options trading (recommendation engine, not auto-trader)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "VRP" }]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "yfinance>=0.2.40",
    "pydantic>=2.5",
    "PyYAML>=6.0",
    "matplotlib>=3.7",
    "requests>=2.31",
    "python-dateutil>=2.8",
    "pyarrow>=14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
vrp = "vrp.cli.main:main"

[tool.setuptools.packages.find]
include = ["vrp*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::FutureWarning",
]
